--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -31,6 +31,20 @@ body {font-family: Arial, Helvetica, sans-serif;}
   animation-duration: 0.4s
 }
 
+.entry{
+	/*display: inline-block;*/
+}
+
+.editBtn{
+	float: left;
+	/*display: inline-block;*/
+}
+
+.user{
+	float: left;
+	/*display: inline-block;*/
+}
+
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {top:-300px; opacity:0} 
